[gd_scene load_steps=7 format=3 uid="uid://df1mua2nfdr5j"]

[ext_resource type="Texture2D" uid="uid://b6tipxe3okxko" path="res://Assets/tutorialbg.png" id="1_ka2pi"]
[ext_resource type="Script" uid="uid://c5g7vir6ng0op" path="res://Scripts/tutorial.gd" id="1_p8jf4"]
[ext_resource type="FontFile" uid="uid://bmy0dltdp5oyx" path="res://Assets/Harmonic.ttf" id="2_feyax"]
[ext_resource type="Texture2D" uid="uid://dilp76xmj4ku8" path="res://Assets/tutorialbg2.png" id="2_i6t4g"]
[ext_resource type="Texture2D" uid="uid://dm5xwoxperhmb" path="res://Assets/tutorialbg4.png" id="5_p1f1o"]
[ext_resource type="Texture2D" uid="uid://d1237vdjoidik" path="res://Assets/tutorialbg5.png" id="5_ys4pu"]

[node name="Tutorial" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p8jf4")

[node name="Background1" type="Sprite2D" parent="."]
position = Vector2(579, 329)
texture = ExtResource("1_ka2pi")

[node name="Background2" type="Sprite2D" parent="."]
visible = false
position = Vector2(579, 326)
texture = ExtResource("2_i6t4g")

[node name="Background3" type="Sprite2D" parent="."]
visible = false
position = Vector2(576, 324)
scale = Vector2(0.453008, 0.452198)
texture = ExtResource("5_p1f1o")

[node name="Background4" type="Sprite2D" parent="."]
visible = false
position = Vector2(576, 324)
scale = Vector2(0.452474, 0.455696)
texture = ExtResource("5_ys4pu")

[node name="StartPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = -11.0
offset_top = -7.0
offset_right = 1165.0
offset_bottom = 666.0

[node name="StartTitle" type="Label" parent="StartPanel"]
layout_mode = 0
offset_left = 110.0
offset_top = 83.0
offset_right = 832.0
offset_bottom = 184.0
theme_override_fonts/font = ExtResource("2_feyax")
theme_override_font_sizes/font_size = 72
text = "Welcome to the Tutorial!"

[node name="StartButton" type="Button" parent="StartPanel"]
layout_mode = 0
offset_left = 230.0
offset_top = 232.0
offset_right = 415.0
offset_bottom = 288.0
theme_override_fonts/font = ExtResource("2_feyax")
theme_override_font_sizes/font_size = 32
text = "Continue"

[node name="RewardDesc2" type="Label" parent="StartPanel"]
layout_mode = 0
offset_left = 240.0
offset_top = 328.0
offset_right = 518.0
offset_bottom = 388.0
theme_override_fonts/font = ExtResource("2_feyax")
theme_override_font_sizes/font_size = 24
text = "If you complete the tutorial
you get a free card!"

[node name="BattlePanel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = -22.0
offset_top = -14.0
offset_right = 1154.0
offset_bottom = 659.0

[node name="BattleTitle" type="Label" parent="BattlePanel"]
layout_mode = 0
offset_left = 237.0
offset_top = 356.0
offset_right = 990.0
offset_bottom = 457.0
theme_override_fonts/font = ExtResource("2_feyax")
theme_override_font_sizes/font_size = 72
text = "This is the Combat Screen"

[node name="BattleButton" type="Button" parent="BattlePanel"]
layout_mode = 0
offset_left = 878.0
offset_top = 241.0
offset_right = 1063.0
offset_bottom = 297.0
theme_override_fonts/font = ExtResource("2_feyax")
theme_override_font_sizes/font_size = 32
text = "Continue"

[node name="EnemyPanel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = -22.0
offset_top = -14.0
offset_right = 1175.0
offset_bottom = 661.0

[node name="EnemyTitle" type="Label" parent="EnemyPanel"]
layout_mode = 0
offset_left = 90.0
offset_top = 521.0
offset_right = 1055.0
offset_bottom = 618.0
theme_override_fonts/font = ExtResource("2_feyax")
theme_override_font_sizes/font_size = 72
text = "This is the enemy you're fighting"

[node name="EnemyButton" type="Button" parent="EnemyPanel"]
layout_mode = 0
offset_left = 915.0
offset_top = 604.0
offset_right = 1100.0
offset_bottom = 660.0
theme_override_fonts/font = ExtResource("2_feyax")
theme_override_font_sizes/font_size = 32
text = "Continue"

[node name="EnemyDescription2" type="Label" parent="EnemyPanel"]
layout_mode = 0
offset_left = 838.0
offset_top = 150.0
offset_right = 1184.0
offset_bottom = 219.0
theme_override_fonts/font = ExtResource("2_feyax")
theme_override_font_sizes/font_size = 54
text = "and next action"

[node name="EnemyDescription1" type="Label" parent="EnemyPanel"]
layout_mode = 0
offset_left = 423.0
offset_top = 42.0
offset_right = 769.0
offset_bottom = 111.0
theme_override_fonts/font = ExtResource("2_feyax")
theme_override_font_sizes/font_size = 54
text = "it's health bar"

[node name="EnemyPointer" type="Line2D" parent="EnemyPanel"]
points = PackedVector2Array(499, 511, 580, 354)
default_color = Color(1, 0, 0, 1)

[node name="EnemyUnderLine2" type="Line2D" parent="EnemyPanel"]
position = Vector2(-754, -394)
scale = Vector2(2.18196, 2.53325)
points = PackedVector2Array(469.303, 208.428, 509.633, 208.428)
closed = true
width = 5.0
default_color = Color(1, 0, 0, 1)

[node name="EnemyUnderLine" type="Line2D" parent="EnemyPanel"]
position = Vector2(150, -186)
scale = Vector2(1.47715, 1.59162)
points = PackedVector2Array(467.549, 208.145, 695.015, 208.145)
closed = true
width = 5.0
default_color = Color(1, 0, 0, 1)

[node name="EnemySquare" type="Line2D" parent="EnemyPanel"]
position = Vector2(-106, -58)
scale = Vector2(1.164, 1.26342)
points = PackedVector2Array(500.389, 173.176, 499.212, 338.882, 692.912, 338.882, 692.912, 173.235)
closed = true
default_color = Color(1, 0, 0, 1)

[node name="PlayerPanel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = -22.0
offset_top = -14.0
offset_right = 1175.0
offset_bottom = 661.0

[node name="PlayerTitle" type="Label" parent="PlayerPanel"]
layout_mode = 0
offset_left = 164.0
offset_top = 202.0
offset_right = 1129.0
offset_bottom = 299.0
theme_override_fonts/font = ExtResource("2_feyax")
theme_override_font_sizes/font_size = 72
text = "This is your hand of cards"

[node name="PlayerButton" type="Button" parent="PlayerPanel"]
layout_mode = 0
offset_left = 890.0
offset_top = 314.0
offset_right = 1075.0
offset_bottom = 370.0
theme_override_fonts/font = ExtResource("2_feyax")
theme_override_font_sizes/font_size = 32
text = "Continue"

[node name="PlayerDesc1" type="Label" parent="PlayerPanel"]
layout_mode = 0
offset_left = 36.0
offset_top = 581.0
offset_right = 382.0
offset_bottom = 650.0
theme_override_fonts/font = ExtResource("2_feyax")
theme_override_font_sizes/font_size = 54
text = "remaining deck"

[node name="PlayerDesc3" type="Label" parent="PlayerPanel"]
layout_mode = 0
offset_left = 846.0
offset_top = 587.0
offset_right = 1192.0
offset_bottom = 656.0
theme_override_fonts/font = ExtResource("2_feyax")
theme_override_font_sizes/font_size = 54
text = "discard pile"

[node name="PlayerDesc2" type="Label" parent="PlayerPanel"]
layout_mode = 0
offset_left = 407.0
offset_top = 373.0
offset_right = 753.0
offset_bottom = 442.0
theme_override_fonts/font = ExtResource("2_feyax")
theme_override_font_sizes/font_size = 54
text = "your health bar"

[node name="PlayerHandSquare" type="Line2D" parent="PlayerPanel"]
position = Vector2(-178, 62)
scale = Vector2(1.164, 1.26342)
points = PackedVector2Array(501.719, 348.26, 831.616, 348.26, 831.616, 481.233, 501.719, 481.233)
closed = true
default_color = Color(1, 0, 0, 1)

[node name="PlayerDiscardSquare" type="Line2D" parent="PlayerPanel"]
position = Vector2(166, 54)
scale = Vector2(1.35489, 1.59624)
points = PackedVector2Array(543.216, 230.542, 543.216, 325.766, 637.688, 325.766, 637.688, 230.542)
closed = true
default_color = Color(1, 0, 0, 1)

[node name="PlayerDeckSquare" type="Line2D" parent="PlayerPanel"]
position = Vector2(-458, 150)
scale = Vector2(1.164, 1.26342)
points = PackedVector2Array(536.083, 215.288, 536.083, 335.596, 646.049, 335.596, 646.049, 215.288)
closed = true
default_color = Color(1, 0, 0, 1)

[node name="CardPanel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = -19.0
offset_top = -10.0
offset_right = 1178.0
offset_bottom = 665.0

[node name="CardTitle" type="Label" parent="CardPanel"]
layout_mode = 0
offset_left = 123.0
offset_top = 66.0
offset_right = 1088.0
offset_bottom = 163.0
theme_override_fonts/font = ExtResource("2_feyax")
theme_override_font_sizes/font_size = 72
text = "Play Cards to defeat the enemy!"

[node name="CardButton" type="Button" parent="CardPanel"]
layout_mode = 0
offset_left = 929.0
offset_top = 172.0
offset_right = 1114.0
offset_bottom = 228.0
theme_override_fonts/font = ExtResource("2_feyax")
theme_override_font_sizes/font_size = 32
text = "Continue"

[node name="CardDesc1" type="Label" parent="CardPanel"]
layout_mode = 0
offset_left = 355.0
offset_top = 314.0
offset_right = 844.0
offset_bottom = 383.0
theme_override_fonts/font = ExtResource("2_feyax")
theme_override_font_sizes/font_size = 54
text = "attack to deal damage"

[node name="CardDesc2" type="Label" parent="CardPanel"]
layout_mode = 0
offset_left = 595.0
offset_top = 410.0
offset_right = 1185.0
offset_bottom = 479.0
theme_override_fonts/font = ExtResource("2_feyax")
theme_override_font_sizes/font_size = 54
text = "and heal to restore health"

[node name="CardDesc3" type="Label" parent="CardPanel"]
layout_mode = 0
offset_left = 91.0
offset_top = 218.0
offset_right = 763.0
offset_bottom = 287.0
theme_override_fonts/font = ExtResource("2_feyax")
theme_override_font_sizes/font_size = 54
text = "defend to block enemy damage"

[node name="CardDefendPointer" type="Line2D" parent="CardPanel"]
points = PackedVector2Array(411, 498, 171, 274, 251, 274, 91, 274)
default_color = Color(1, 0, 0, 1)

[node name="CardAttackPointer" type="Line2D" parent="CardPanel"]
points = PackedVector2Array(595, 498, 427, 370, 491, 370, 363, 370)
default_color = Color(1, 0, 0, 1)

[node name="CardHealPointer" type="Line2D" parent="CardPanel"]
points = PackedVector2Array(723, 498, 731, 466, 771, 466, 683, 466)
default_color = Color(1, 0, 0, 1)

[node name="CardHealSquare" type="Line2D" parent="CardPanel"]
position = Vector2(-349, -46)
scale = Vector2(1.83574, 2.54797)
points = PackedVector2Array(553.456, 213.503, 553.456, 276.298, 614.467, 276.298, 614.467, 213.503)
closed = true
width = 5.0
default_color = Color(1, 0, 0, 1)

[node name="CardAttackSquare" type="Line2D" parent="CardPanel"]
position = Vector2(-213, 154)
scale = Vector2(1.35489, 1.59624)
points = PackedVector2Array(555.025, 215.507, 555.025, 315.743, 643.593, 315.743, 643.593, 215.507)
closed = true
width = 8.0
default_color = Color(1, 0, 0, 1)

[node name="CardDefendSquare" type="Line2D" parent="CardPanel"]
position = Vector2(-221, 234)
scale = Vector2(1.164, 1.26342)
points = PackedVector2Array(542.956, 208.956, 542.956, 335.596, 646.049, 335.596, 646.049, 208.956)
closed = true
default_color = Color(1, 0, 0, 1)

[node name="AtkBoostPanel" type="Panel" parent="."]
visible = false
offset_left = -38.0
offset_top = -20.0
offset_right = 1159.0
offset_bottom = 655.0

[node name="AtkBoostButton" type="Button" parent="AtkBoostPanel"]
layout_mode = 0
offset_left = 36.0
offset_top = 243.0
offset_right = 221.0
offset_bottom = 299.0
theme_override_fonts/font = ExtResource("2_feyax")
theme_override_font_sizes/font_size = 32
text = "Continue"

[node name="AtkBoostDesc" type="Label" parent="AtkBoostPanel"]
layout_mode = 0
offset_left = 334.0
offset_top = 188.0
offset_right = 1175.0
offset_bottom = 257.0
theme_override_fonts/font = ExtResource("2_feyax")
theme_override_font_sizes/font_size = 54
text = "You can also boost your Attack Damage"

[node name="AtkBoostDesc2" type="Label" parent="AtkBoostPanel"]
layout_mode = 0
offset_left = 78.0
offset_top = 380.0
offset_right = 612.0
offset_bottom = 420.0
theme_override_fonts/font = ExtResource("2_feyax")
theme_override_font_sizes/font_size = 40
text = "It lasts until the end of battle"

[node name="AtkBoostSquare" type="Line2D" parent="AtkBoostPanel"]
position = Vector2(-338, -36)
scale = Vector2(1.83574, 2.54797)
points = PackedVector2Array(553.456, 213.503, 553.456, 276.298, 618.825, 276.298, 618.825, 213.503)
closed = true
width = 5.0
default_color = Color(1, 0, 0, 1)

[node name="AtkBoostPointer" type="Line2D" parent="AtkBoostPanel"]
points = PackedVector2Array(678, 244, 734, 508)
default_color = Color(1, 0, 0, 1)

[node name="RewardPanel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = -19.0
offset_top = -10.0
offset_right = 1178.0
offset_bottom = 665.0

[node name="RewardTitle" type="Label" parent="RewardPanel"]
layout_mode = 0
offset_left = 274.0
offset_top = 20.0
offset_right = 1239.0
offset_bottom = 117.0
theme_override_fonts/font = ExtResource("2_feyax")
theme_override_font_sizes/font_size = 72
text = "Win to get a new card"

[node name="RewardButton" type="Button" parent="RewardPanel"]
layout_mode = 0
offset_left = 36.0
offset_top = 243.0
offset_right = 221.0
offset_bottom = 299.0
theme_override_fonts/font = ExtResource("2_feyax")
theme_override_font_sizes/font_size = 32
text = "Continue"

[node name="RewardDesc1" type="Label" parent="RewardPanel"]
layout_mode = 0
offset_left = 268.0
offset_top = 542.0
offset_right = 961.0
offset_bottom = 611.0
theme_override_fonts/font = ExtResource("2_feyax")
theme_override_font_sizes/font_size = 54
text = "then swap with one in your deck"

[node name="RewardDesc2" type="Label" parent="RewardPanel"]
layout_mode = 0
offset_left = 443.0
offset_top = 618.0
offset_right = 809.0
offset_bottom = 658.0
theme_override_fonts/font = ExtResource("2_feyax")
theme_override_font_sizes/font_size = 40
text = "Elites reward 2 cards!"

[node name="RewardSquare" type="Line2D" parent="RewardPanel"]
position = Vector2(-477, -462)
scale = Vector2(1.83574, 2.54797)
points = PackedVector2Array(557.814, 216.643, 557.814, 273.158, 614.467, 273.158, 614.467, 216.643)
closed = true
width = 5.0
default_color = Color(1, 0, 0, 1)

[node name="RewardDeckUnderline" type="Line2D" parent="RewardPanel"]
points = PackedVector2Array(1147, 514, 59, 514)
default_color = Color(1, 0, 0, 1)

[node name="MapPanel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = -19.0
offset_top = -10.0
offset_right = 1178.0
offset_bottom = 665.0

[node name="MapTitle" type="Label" parent="MapPanel"]
layout_mode = 0
offset_left = 51.0
offset_top = 114.0
offset_right = 885.0
offset_bottom = 211.0
theme_override_fonts/font = ExtResource("2_feyax")
theme_override_font_sizes/font_size = 72
text = "Click map nodes to advance"

[node name="MapButton" type="Button" parent="MapPanel"]
layout_mode = 0
offset_left = 941.0
offset_top = 105.0
offset_right = 1126.0
offset_bottom = 161.0
theme_override_fonts/font = ExtResource("2_feyax")
theme_override_font_sizes/font_size = 32
text = "Continue"

[node name="MapDesc1" type="Label" parent="MapPanel"]
layout_mode = 0
offset_left = 627.0
offset_top = 434.0
offset_right = 1178.0
offset_bottom = 547.0
theme_override_fonts/font = ExtResource("2_feyax")
theme_override_font_sizes/font_size = 54
text = "defeat the boss to win
and return home a hero!"

[node name="MapDesc2" type="Label" parent="MapPanel"]
layout_mode = 0
offset_left = 59.0
offset_top = 594.0
offset_right = 775.0
offset_bottom = 707.0
theme_override_fonts/font = ExtResource("2_feyax")
theme_override_font_sizes/font_size = 54
text = "Campfires heal back some health"

[node name="Label" type="Label" parent="MapPanel"]
layout_mode = 0
offset_left = 411.0
offset_top = 242.0
offset_right = 920.0
offset_bottom = 404.0
theme_override_fonts/font = ExtResource("2_feyax")
theme_override_font_sizes/font_size = 54
text = "elites are harder
but give bonus rewards"

[node name="MapBossPointer" type="Line2D" parent="MapPanel"]
points = PackedVector2Array(939, 434, 1035, 370)
default_color = Color(1, 0, 0, 1)

[node name="MapBossSquare" type="Line2D" parent="MapPanel"]
position = Vector2(-165, -726)
scale = Vector2(3.36993, 3.15171)
points = PackedVector2Array(356.091, 327.441, 356.091, 347.747, 391.7, 347.747, 391.7, 327.441)
closed = true
width = 3.0
default_color = Color(1, 0, 0, 1)

[node name="MapCampfirePointer" type="Line2D" parent="MapPanel"]
points = PackedVector2Array(227, 586, 459, 418)
default_color = Color(1, 0, 0, 1)

[node name="MapElitePointer" type="Line2D" parent="MapPanel"]
points = PackedVector2Array(323, 362, 403, 274)
default_color = Color(1, 0, 0, 1)

[node name="MapCampfireSquare" type="Line2D" parent="MapPanel"]
position = Vector2(-543.268, -457.807)
scale = Vector2(3.13969, 2.97264)
points = PackedVector2Array(291.197, 278.475, 291.197, 294.622, 342.158, 294.622, 342.158, 278.475)
closed = true
width = 2.0
default_color = Color(1, 0, 0, 1)

[node name="MapEliteSquare" type="Line2D" parent="MapPanel"]
position = Vector2(-477, -462)
scale = Vector2(1.83574, 2.54797)
points = PackedVector2Array(357.35, 323.395, 357.35, 348.513, 435.792, 348.513, 435.792, 323.395)
closed = true
width = 3.0
default_color = Color(1, 0, 0, 1)

[node name="SkipButton" type="Button" parent="."]
layout_mode = 0
offset_right = 132.0
offset_bottom = 42.0
theme_override_fonts/font = ExtResource("2_feyax")
theme_override_font_sizes/font_size = 24
text = "Skip Tutorial"

[connection signal="pressed" from="StartPanel/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="BattlePanel/BattleButton" to="." method="_on_battle_button_pressed"]
[connection signal="pressed" from="EnemyPanel/EnemyButton" to="." method="_on_enemy_button_pressed"]
[connection signal="pressed" from="PlayerPanel/PlayerButton" to="." method="_on_player_button_pressed"]
[connection signal="pressed" from="CardPanel/CardButton" to="." method="_on_card_button_pressed"]
[connection signal="pressed" from="AtkBoostPanel/AtkBoostButton" to="." method="_on_atk_boost_button_pressed"]
[connection signal="pressed" from="RewardPanel/RewardButton" to="." method="_on_reward_button_pressed"]
[connection signal="pressed" from="MapPanel/MapButton" to="." method="_on_map_button_pressed"]
[connection signal="pressed" from="SkipButton" to="." method="_on_skip_button_pressed"]
